# 3-python-package-team_riptide

./: Pipfile  README.md  demo.py  pyproject.toml
.github/workflows/: build.yaml
joytide/: __init__.py  __main__.py  ascii_art.py  core.py  race.py  twenty_48.py
tests/: README.txt  test_2048.py  test_art.py  test_banner.py  test_confetti.py  test_race.py
