[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "joytide"
version = "0.0.1"
description = "A fun Python package by team_riptide with random playful helpers."
readme = "README.md"
authors = [
  { name = "Saud Alsheddy", email = "sa8429@nyu.edu" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["Python", "fun", "package"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Education",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/team-riptide/joytide"
Repository = "https://github.com/team-riptide/joytide.git"

[project.scripts]
joytide = "joytide.__main__:main"
